# cau_services

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  timetable.ipynb
cau/: Timetable.py  __init__.py
