[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cau_services"
version = "0.0.3"
authors = [
    {name = "Timur Urunbaev", email = "urunbaev.timur@gmail.com"}
]
description = "CAU (Central Asian University) Services Python Client, for student projects"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]
dependencies = [
    "pandas",
    "tqdm",
    "requests",
    'importlib-metadata; python_version<"3.12"',
]
